src/stylesheets/panel.style.css
/* ... */
.panel-holding-name1trs {
  text-align: left;
  font-family: Gotham Bold, sans-serif;
  text-transform: uppercase;
  font-size: 95px;
  padding-top: 0px;
}

.panel-holding-name2trs {
  text-align: left;
  font-family: Gotham Bold, sans-serif;
  text-transform: uppercase;
  font-size: 95px;
  padding-top: 0px;
}

.panel-holding-flag {
  font-family: Gotham Light, sans-serif;
  font-size: 50px;
  padding-top: 240px;
  padding-right: 15px;
  text-transform: none;
  text-overflow: ellipsis;
  overflow: hidden;
  float: right;
  z-index: 999;
}

.panel-holding-club {
  text-align: left;
  font-family: Gotham Light, sans-serif;
  font-size: 55px;
  padding-top: 25px;
  padding-left: 0px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  display: block;
  max-width: 1850px;
  max-height: 130px;
}

.panel-catbg1 {
  color: #ffffff;
  text-transform: uppercase;
  font-size: 140px;
  border: 0px;
  width: 73%;
  border-collapse: collapse;
  -webkit-transform: rotate(0deg);
  position: absolute;
  top: 665px;
  z-index: 99;
}

.panel-holding-category {
  text-align: center;
  padding-top: 0px;
  font-family: Gotham Light, sans-serif;
  font-size: 50px;
  text-transform: uppercase;
  color: #ffffff;
  vertical-align: middle;
  padding: 30px;
}

.panel-holding-panel-control {
  color: #ffffff;
  font-family: Myriad Pro, sans-serif;
  text-transform: uppercase;
  font-size: 90px;
  text-align: center;
  padding-top: 20px;
  position: absolute;
  margin-left: auto;
  margin-right: auto;
  border: 0px;
  border-collapse: collapse;
  width: 100%;
}

.panel-holding-panel-bottom {
  color: #ffffff;
  font-family: Myriad Pro, sans-serif;
  text-transform: uppercase;
  font-weight: bold;
  font-size: 90px;
  text-align: center;
  padding-top: 630px;
  position: absolute;
  margin-left: auto;
  margin-right: auto;
  border: 0px;
  border-collapse: collapse;
  width: 100%;
}

.panel-pm-panel {
  color: #ffffff;
  background-color: #2c2c2c;
  font-family: Myriad Pro, sans-serif;
  font-size: 25px;
  text-align: center;
  padding-top: 30px;
  width: 400px;
  overflow: hidden;
  max-width: 300px;
  margin: auto;
  vertical-align: middle;
}
.panel-pm-panelg {
  color: #ffffff;
  background-color: #228b22;
  font-family: Myriad Pro, sans-serif;
  font-size: 25px;
  text-align: center;
  padding-top: 30px;
  width: 400px;
  overflow: hidden;
  max-width: 300px;
  margin: auto;
  vertical-align: middle;
}
.panel-pm-td {
  color: #ffffff;
  background-color: #000000;
  font-family: Myriad Pro, sans-serif;
  font-size: 25px;
  text-align: center;
  padding: 10px;
  width: 400px;
  height: 40px;
  overflow: hidden;
  max-width: 300px;
  margin: auto;
  vertical-align: middle;
}
#video-background {
  /*  making the video fullscreen  */
  position: fixed;
  right: 0;
  bottom: 0;
  min-width: 100%;
  min-height: 100%;
  width: auto;
  height: auto;
  z-index: -100;
}

.panel-comp-venue {
  color: #ffffff;
  font-family: Myriad Pro, sans-serif;
  font-size: 65px;
  text-align: left;
  padding-right: 20px;
  border: 0px;
}

.panel-scores-frame {
  background: -webkit-gradient(
    linear,
    left top,
    left bottom,
    color-stop(0, #961b23),
    color-stop(1, #961b23)
  );
  width: 98%;
}

.panel-slist-iframe {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 1000;
  border: 0;
}

.panel-comp-group {
  border-radius: 3px;
  width: 1920px;
  height: 100px;
  color: #ffffff;
  background-color: #1a1a1a;
  padding-left: 30px;
  padding-right: 30px;
  padding-top: 30px;
  font-family: Myriad Pro, sans-serif;
  text-transform: uppercase;
  font-size: 75px;
  text-align: center;
  table-layout: fixed;
  line-height: 100%;
  align: right;
  /*-webkit-box-shadow: 15px 15px 30px 0px #320101;*/
  /*border: 2px solid #a36f70;*/
}

.panel-comp-group-icon {
  border-radius: 3px;
  width: 200px;
  height: 100px;
  color: #000000;
  background-size: 200px;
  background-position: center;
  padding: 0px;
  table-layout: fixed;
  align: center;
  font-size: 75px;
  text-align: center;
  font-family: Myriad Pro, sans-serif;
  font-weight: bold;
}
.panel-results-logo {
  padding-right: 0px;
  align: left;
}
.panel-horizontal-rule {
  height: 0px;
  background-color: #ffffff;
}

.panel-scores-table {
  font-family: Myriad Pro, sans-serif;
  font-size: 25px;
  font-weight: normal;
  color: #ffffff;
  width: 100%;
  border-collapse: collapse;
  margin-left: 9px;
  margin-top: 15px;
  line-height: 100%;
}
.panel-space {
  height: 5px;
  width: 25px;
}
.panel-gap {
  width: 5px;
}
.panel-announce-table {
  font-family: Myriad Pro, sans-serif;
  font-size: 10px;
  color: #ffffff;
  width: 100%;
  height: 100%;
  border-collapse: collapse;
}

.panel-announce-scores {
  font-family: Myriad Pro, sans-serif;
  font-size: 12px;
  color: #ffffff;
  border-collapse: collapse;
  width: 100%;
}

.panel-announce-iframe {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
  border: 0px white solid;
}

.panel-highlight {
}

.panel-lowlight {
}
.panel-space {
  height: 5px;
}
.panel-scores-pos {
  text-align: center;
  padding-top: 5px;
  padding-right: 10px;
  padding-left: 10px;
  white-space: nowrap;
  background-color: #ba282e;
  border-radius: 3px 0 0px 3px;
  font-weight: bold;
}

.panel-scores-name {
  text-align: left;
  border-color: #a0a0a0;
  padding-top: 10px;
  padding-right: 5px;
  padding-left: 10px;
  white-space: nowrap;
  background-color: #6d1a1c;
  width: 1px;
  line-height: 100%;
}

.panel-scores-club {
  text-align: left;
  font-style: normal;
  font-family: Myriad Pro, sans-serif;
  font-weight: bold;
  border-color: #a0a0a0;
  padding-right: 5px;
  padding-left: 10px;
  padding-bottom: 0px;
  padding-top: 5px;
  white-space: nowrap;
  background-color: #6d1a1c;
  line-height: 100%;
}

.panel-scores-tri-set-E {
  text-align: center;
  border-color: #a0a0a0;
  padding-top: 10px;
  padding-right: 15px;
  padding-left: 15px;
  white-space: nowrap;
  background-color: #6d1a1c;
  line-height: 100%;
}
/* ... */

